se agregó un sidebar para el modal de creación de usuario

--- a/src/app/demo/components/pages/events-udi/events-udi.component.html
+++ b/src/app/demo/components/pages/events-udi/events-udi.component.html
@@ -422,7 +422,7 @@
       </div>
       <div class="grid p-fluid field mt-1">
         <div class="col-12">
-          <p>Digite el nombre del <b>encargado</b> y seleccionelo para registrarlo en la reunión.</p>
+          <p>Digite el nombre del <b>responsable</b> de la tarea.</p>
           <span class="p-fluid">
             <p-autoComplete 
                 formControlName="assignedUser"
