--- a/src/app/demo/components/pages/users/users.component.scss
+++ b/src/app/demo/components/pages/users/users.component.scss
@@ -30,3 +30,10 @@
     margin: 1rem 0;
     color: #6c757d;
   }
+
+  .footer {
+    position: fixed;
+    bottom: 0;
+    text-align: center;
+    padding: 20px 0;
+}
