--- a/src/app/demo/components/pages/users/users.component.scss
+++ b/src/app/demo/components/pages/users/users.component.scss
@@ -10,10 +10,10 @@
     margin: auto;
     max-width: 400px;
     padding: 2rem;
-    border: 1px solid #f5c6cb;
+    //border: 1px solid #f5c6cb;
     border-radius: 8px;
     background-color: #ffffff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    //box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   
   .error-icon {
