--- a/src/app/demo/components/pages/events/events.component.html
+++ b/src/app/demo/components/pages/events/events.component.html
@@ -1,10 +1,10 @@
-<div class="grid">
+<div class="grid" #cardBody>
   <div class="col-12">
     <p-card>
       <p-toolbar class="mt-3">
         <div class="p-toolbar-group-left">
           <button type="button" pButton icon="pi pi-plus" label="Añadir Evento"
-            (click)="displayDialog=true"></button>
+            (click)="newEventDialog=true"></button>
         </div>
 
         <div class="p-toolbar-group-right">
@@ -27,86 +27,6 @@
   </div>
 </div>
 
-<p-dialog header="Añadir Evento" [style]="{ width: '60rem' }"
-  [(visible)]="displayDialog" [modal]="true" [closable]="false">
-  <div class="content">
-    <form [formGroup]="eventForm">
-      <div class="p-fluid grid field mt-4">
-        <p-floatLabel class="col-8">
-          <input id="title" type="text" pInputText formControlName="title" />
-          <label for="title">Título</label>
-        </p-floatLabel>
-        <div class="col-4 d-flex">
-          <p class="auto">Elija el color del evento</p>
-          <p-colorPicker class="m-auto" formControlName="color" />
-        </div>
-      </div>
-      <div class="grid p-fluid field mt-4">
-        <div class="col-6">
-          <p>Inicio</p>
-          <p-calendar
-            formControlName="start"
-            dateFormat="yy-mm-dd"
-            class="max-w-full"
-            [inline]="true"
-            [showTime]="true"
-            [hourFormat]="24" />
-        </div>
-        <div class="col-6">
-          <p>Fin</p>
-          <p-calendar
-            formControlName="start"
-            dateFormat="yy-mm-dd"
-            class="max-w-full"
-            [inline]="true"
-            [showTime]="true"
-            [hourFormat]="24" />
-        </div>
-
-      </div>
-      <div class="footer mt-5">
-        <button
-          pButton
-          pRipple
-          label="Regresar"
-          icon="pi pi-angle-left"
-          class="p-button-text"
-          iconPos="left"
-          (click)="displayDialog=false"></button>
-
-        <p-button label="Registrar" iconPos="right"
-          icon="pi pi-check"
-          (click)="addEvent()" />
-
-      </div>
-    </form>
-  </div>
-  <!-- <form [formGroup]="eventForm" (ngSubmit)="addEvent()">
-    <div class="p-fluid">
-      <div class="p-field">
-        <label for="title">Título</label>
-        <input id="title" type="text" pInputText formControlName="title" />
-      </div>
-      <div class="p-field">
-        <label for="start">Inicio</label>
-        <p-calendar id="start" formControlName="start" dateFormat="yy-mm-dd"
-          showTime="true" hourFormat="24"></p-calendar>
-      </div>
-      <div class="p-field">
-        <label for="end">Fin</label>
-        <p-calendar id="end" formControlName="end" dateFormat="yy-mm-dd"
-          showTime="true" hourFormat="24"></p-calendar>
-      </div>
-      <div class="p-field">
-        <button type="submit" pButton label="Guardar" icon="pi pi-check"
-          [disabled]="eventForm.invalid"></button>
-        <button type="button" pButton label="Cancelar" icon="pi pi-times"
-          class="p-button-secondary" (click)="displayDialog=false"></button>
-      </div>
-    </div>
-  </form> -->
-</p-dialog>
-
 <p-dialog header="Detalle del Evento"
   [style]="{ width: '100rem', height: '100rem' }"
   [(visible)]="showEventDetailDoalog" [modal]="true" [closable]="true"
@@ -116,3 +36,80 @@
     #calendarDetail
     [options]="calendarOptionsDetail"></full-calendar>
 </p-dialog>
+
+<p-sidebar [(visible)]="newEventDialog" [style]="{'width': '40%'}" position="right">
+  <ng-template pTemplate="header">
+      <span class="font-semibold text-xl">Agendar una nueva reunión</span>
+  </ng-template>
+  <div class="content">
+    <form [formGroup]="eventForm">
+      <div class="p-fluid grid field mt-4">
+        <p-floatLabel class="col-8">
+          <input id="title" type="text" pInputText formControlName="title" />
+          <label for="title">Título</label>
+        </p-floatLabel>
+        <div class="col-4 d-flex m-auto">
+          <p-colorPicker formControlName="color" />
+          <p class="m-auto">Color del evento</p>
+          
+        </div>
+      </div>
+      <div class="p-fluid grid field mt-5">
+        <div class="field col-12 md:col-12">
+          <span class="p-float-label">
+              <textarea
+                  formControlName="description"
+                  inputId="textarea"
+                  rows="4"
+                  cols="30"
+                  pInputTextarea></textarea>
+              <label for="textarea">Descripción</label>
+          </span>
+        </div>
+      </div>
+      <div class="p-fluid field mt-1">
+        <p-floatLabel class="col-12">
+          <input id="title" type="text" pInputText formControlName="eventLink" />
+          <label for="title">Url de la reunión (opcional)</label>
+        </p-floatLabel>
+      </div>
+      <div class="grid p-fluid field mt-1">
+        <div class="col-6">
+          <p>Inicio</p>
+          <p-calendar
+                formControlName="start"
+                [iconDisplay]="'input'"
+                [showIcon]="true"
+                [showTime]="true" 
+                [hourFormat]="12"
+                dateFormat="dd-mm-yy"></p-calendar>
+        </div>
+        <div class="col-6">
+          <p>Fin</p>
+          <p-calendar
+                formControlName="end"
+                [iconDisplay]="'input'"
+                [showIcon]="true"
+                [showTime]="true" 
+                [hourFormat]="12"
+                dateFormat="dd-mm-yy"></p-calendar>
+        </div>
+      </div>
+        <div class="footer">
+          <button
+            pButton
+            pRipple
+            label="Regresar"
+            icon="pi pi-angle-left"
+            class="p-button-text"
+            iconPos="left"
+            (click)="newEventDialog=false"></button>
+  
+          <p-button label="Registrar" iconPos="right"
+            icon="pi pi-check"
+            [disabled]="eventForm.invalid"
+            (click)="addEvent()" />
+        </div>
+    </form>
+  </div>
+</p-sidebar>
