--- a/src/app/demo/components/pages/events/events.component.scss
+++ b/src/app/demo/components/pages/events/events.component.scss
@@ -5,3 +5,10 @@
 .m-auto{
     margin: auto;
 }
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    text-align: center;
+    padding: 20px 0;
+}
