--- a/src/app/demo/components/pages/events-udi/events-udi.component.html
+++ b/src/app/demo/components/pages/events-udi/events-udi.component.html
@@ -86,8 +86,12 @@
           <div *ngIf="!showEdit" class="grid col-12">
             <div class="col-3"><p class="font-bold">Descripción de la reunión:</p><p>{{eventSelected}}</p></div>
             <div class="col-3"><p class="font-bold">Url de la reunión:</p><p>{{eventSelected}}</p></div>
-              <div class="col-3"><p class="font-bold">Fecha y hora de inicio:</p><p>{{dateFormatService.formatDate(eventSelected.event.start)}}</p></div>
-              <div class="col-3"><p class="font-bold">Fecha y hora de fin:</p><p>{{dateFormatService.formatDate(eventSelected.event.end)}}</p></div>
+              <div class="col-3"><p class="font-bold">Fecha y hora de inicio:</p><p>
+                <i class="pi pi-calendar" style="font-size: 1rem"></i>
+                {{dateFormatService.formatDate(eventSelected.event.start)}}</p></div>
+              <div class="col-3"><p class="font-bold">Fecha y hora de fin:</p><p>
+                <i class="pi pi-calendar" style="font-size: 1rem"></i>
+                {{dateFormatService.formatDate(eventSelected.event.end)}}</p></div>
           </div>
           <div *ngIf="showEdit" class="grid col-12">
               <div class="col-3"><p class="font-bold">Nro de
@@ -257,7 +261,7 @@
                     class="flex justify-content-between mb-2">
                     <span class="block text-900">
                       {{comment.name}}</span>
-                    <span class="block text-700">1 Jun 17:58 pm</span>
+                    <span class="block text-700">{{dateFormatService.formatTimeDifference(comment.date)}}</span>
                   </div>
                   <span
                     class="block text-900 border-1 surface-ground surface-border p-2 border-round"
