--- a/src/app/demo/components/pages/inscription-tracking/inscription-tracking.component.html
+++ b/src/app/demo/components/pages/inscription-tracking/inscription-tracking.component.html
@@ -18,7 +18,7 @@
             <div class="card">
                 <p-table #dt [value]="registros" responsiveLayout="scroll"
                     [rows]="10"
-                    [globalFilterFields]="['titulo_proyecto_tesis','nombre']"
+                    [globalFilterFields]="['thesis_project_title','nombre']"
                     [paginator]="true" [rowsPerPageOptions]="[10,20,30]"
                     [showCurrentPageReport]="true"
                     currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
@@ -39,14 +39,14 @@
                     </ng-template>
                     <ng-template pTemplate="header">
                         <tr> 
-                            <th pSortableColumn="titulo_proyecto_tesis"
+                            <th pSortableColumn="thesis_project_title"
                                 style="width:60%">Título de
                                 tesis <p-sortIcon
-                                    field="titulo_proyecto_tesis"></p-sortIcon></th>
-                            <th pSortableColumn="nombre"
+                                    field="thesis_project_title"></p-sortIcon></th>
+                            <th pSortableColumn="name"
                                 style="width:20%">Revisor
-                                <p-sorIcon
-                                    field="nombre"></p-sorIcon></th>
+                                <p-sortIcon
+                                    field="status"></p-sortIcon></th>
                             <th style="width:10%">Estado</th>
                             <th style="width:10%"></th>
                         </tr>
@@ -56,18 +56,18 @@
                             <td style="width:14%; min-width:10rem;"><span
                                     class="p-column-title">Título de
                                     tesis</span>
-                                {{data.titulo_proyecto_tesis}}
+                                {{data.thesis_project_title}}
                             </td>
                             <td style="width:14%; min-width:8rem;">
                                 <span class="p-column-title">Revisor</span>
-                                {{data.inscripciones[0].docente[0].nombre + ' '
+                                {{data.inscriptions[0].teachers[0].name + ' '
                                 +
-                                data.inscripciones[0].docente[0].apellidos}}
+                                data.inscriptions[0].teachers[0].surnames}}
                             </td>
                             <td style="width:14%; min-width: 10rem;"><span
                                     class="p-column-title">estado</span>
                                 <span
-                                    [class]="'product-badge status-' + (data.estado ? data.estado.toLowerCase() : '')">{{data.inscripciones[0].estado}}</span>
+                                  >{{data.inscriptions[0].status}}</span>
                             </td>
                             <td>
                                 <div class="flex">
@@ -168,39 +168,39 @@
 
                 <h4
                     class="font-bold">Título:
-                    {{inscriptionSelected.titulo_proyecto_tesis}}</h4>
+                    {{inscriptionSelected.thesis_project_title}}</h4>
 
             </div>
             <div *ngIf="!showEdit" class="grid col-12">
                 <div class="col-3"><p class="font-bold">Nro de
-                        expediente:</p><p>{{inscriptionSelected.expediente}}</p></div>
+                        expediente:</p><p>{{inscriptionSelected.file}}</p></div>
                 <div class="col-3"><p class="font-bold">Escuala
-                        profesional:</p><p>{{inscriptionSelected.escuela_profesional}}</p></div>
+                        profesional:</p><p>{{inscriptionSelected.professional_school}}</p></div>
                 <div class="col-3"><p class="font-bold">Nro de
-                        oficio:</p><p>{{inscriptionSelected.numero_oficio}}</p></div>
+                        oficio:</p><p>{{inscriptionSelected.office_number}}</p></div>
                 <div class="col-3"><p class="font-bold">Nro de
-                        resolución:</p><p>{{inscriptionSelected.numero_resolucion}}</p></div>
+                        resolución:</p><p>{{inscriptionSelected.resolution_number}}</p></div>
             </div>
             <div *ngIf="showEdit" class="grid col-12">
                 <div class="col-3"><p class="font-bold">Nro de
                         expediente:</p><input type="text" pInputText
                         class="full-width"
-                        [value]="inscriptionSelected.expediente" />
+                        [value]="inscriptionSelected.file" />
                 </div>
                 <div class="col-3"><p class="font-bold">Escuala
                         profesional:</p><input type="text" pInputText
                         class="full-width"
-                        [value]="inscriptionSelected.escuela_profesional" />
+                        [value]="inscriptionSelected.professional_school" />
                 </div>
                 <div class="col-3"><p class="font-bold">Nro de
                         oficio:</p><input type="text" pInputText
                         class="full-width"
-                        [value]="inscriptionSelected.numero_oficio" />
+                        [value]="inscriptionSelected.office_number" />
                 </div>
                 <div class="col-3"><p class="font-bold">Nro de
                         resolución:</p><input type="text" pInputText
                         class="full-width"
-                        [value]="inscriptionSelected.numero_resolucion" />
+                        [value]="inscriptionSelected.resolution_number" />
                 </div>
             </div>
             <div class="grid col-12">
@@ -208,12 +208,12 @@
                         Facultad:</p>
                     <p *ngIf="!showEdit">
                         <i class="pi pi-calendar"></i>
-                        {{inscriptionSelected.inscripciones[0].fecha_recepcion_facultad}}
+                        {{inscriptionSelected.inscriptions[0].reception_date_faculty}}
                     </p>
                     <div *ngIf="showEdit" class="grid p-fluid">
                         <div class="field col-12 md:col-12">
                             <p-calendar *ngIf="showEdit"
-                                [(ngModel)]="inscriptionSelected.inscripciones[0].fecha_recepcion_facultad"
+                                [(ngModel)]="inscriptionSelected.inscriptions[0].reception_date_faculty"
                                 [iconDisplay]="'input'"
                                 class="full-width"
                                 [showIcon]="true"
@@ -227,10 +227,10 @@
                         UDI:</p>
                     <p *ngIf="!showEdit">
                         <i class="pi pi-calendar"></i>
-                        {{inscriptionSelected.inscripciones[0].fecha_aprobacion_UDI}}
+                        {{inscriptionSelected.inscriptions[0].approval_date_udi}}
                     </p>
                     <p-calendar *ngIf="showEdit"
-                        [(ngModel)]="inscriptionSelected.inscripciones[0].fecha_aprobacion_UDI"
+                        [(ngModel)]="inscriptionSelected.inscriptions[0].approval_date_udi"
                         [iconDisplay]="'input'"
                         class="full-width"
                         [showIcon]="true"
@@ -259,72 +259,54 @@
 
             </div>
             <div class="ml-2 mr-2 separator"></div>
-            <div class="grid col-12">
-                <div class="col-4">
-                    <p-table *ngIf="!showSelectNewReviwer"
-                        [value]="inscriptionSelected.inscripciones[0].docente">
+            <div *ngIf="!showEdit" class="grid col-12">
+                <div class="col-6">
+                    <p-table
+                        [value]="reviewerList">
                         <ng-template pTemplate="header">
                             <tr>
-                                <th><i class="pi pi-user"></i> Revisor</th>
-                                <th *ngIf="showEdit" style="width: 10px;">
-                                    <p-button *ngIf="showEdit"
-                                    icon="pi pi-pencil"
-                                    [rounded]="true" [text]="true"
-                                    severity="info" />
-                                </th>
+                                <th colspan="3">Datalle del revisor</th>
                             </tr>
                         </ng-template>
                         <ng-template pTemplate="body" let-product>
                             <tr>
                                 <td>
                                     {{
-                                        product.nombre + ' ' +
-                                        product.apellidos
+                                        product.name + ' ' +
+                                        product.surnames
                                         }}
+                                </td>
+                                <td>
+                                    {{product.email}}
+                                </td>
+                                <td>
+                                    {{product.phone}}
                                 </td>
                             </tr>
                         </ng-template>
                     </p-table>
-                    <div *ngIf="showSelectNewReviwer" class="grid p-fluid mt-3">
-                        <div class="field col-12 md:col-12">
-                            <span class="p-float-label">
-                                <p-autoComplete
-                                    id="inputtext"
-                                    [suggestions]="filteredReviewers"
-                                    (completeMethod)="filterReviewers($event)"
-                                    field="name" />
-                                <label for="inputtext">Ingrese el nombre del
-                                    revisor</label>
-                            </span>
-                        </div>
-                    </div>
                 </div>
-                <div class="col-8">
-
-                    <p-table *ngIf="!showSelectNewReviwer"
-                        [value]="inscriptionSelected.egresados">
+                <div class="col-6">
+                    <p-table
+                        [value]="graduatesList">
                         <ng-template pTemplate="header">
                             <tr>
-                                <th style="width: 35%;"><i
-                                        class="pi pi-users"></i>
-                                    Estudiantes</th>
-                                <th style="width: 35%;"></th>
-                                <th style="width: 30%;">
-                                    <p-button *ngIf="showEdit"
-                                    icon="pi pi-pencil"
-                                    [rounded]="true" [text]="true"
-                                    severity="info" (click)="showEditSudents = true" />
+                                <th colspan="3">
+                                    {{graduatesList.length > 1 ? 
+                                        'Detalle de los estudiantes' : 
+                                        'Detalle del estudiante' 
+                                    }}
                                 </th>
                             </tr>
                         </ng-template>
                         <ng-template pTemplate="body" let-product>
                             <tr>
-                                <td>{{ product.nombre + ' ' + product.apellidos
+                                <td>{{ product.name + ' ' + product.surnames
                                     }}</td>
                                 <td>{{ product.email }}</td>
                                 <td>
                                     {{
-                                        product.celular
+                                        product.phone
                                     }}
                                 </td>
                             </tr>
@@ -361,24 +343,20 @@
                         </p>
                     </p-card>
                 </div>
-                <div *ngIf="inscriptionState !== 'Cancelado' && inscriptionState !== 'Aprobado'" class="col-11">
+                <div *ngIf="inscriptionState !== 'Cancelado' && inscriptionState !== 'Aprobado'" class="col-12">
                     <form [formGroup]="tasksForm">
                         <span class="p-float-label">
-                            <input
-                                type="text"
-                                style="width: 100%;"
-                                id="taskDescription"
-                                pInputText
-                                formControlName="taskDescription" />
+                            <textarea
+                                  inputId="taskDescription"
+                                  rows="1"
+                                  style="width: 100%; resize: none;"
+                                  formControlName="taskDescription"
+                                  pInputTextarea 
+                                  (keydown.enter)="addTask($event)"></textarea>
                             <label for="taskDescription">Escribe la tarea
                                 aquí...</label>
                         </span>
                     </form>
-                </div>
-                <div *ngIf="inscriptionState !== 'Cancelado' && inscriptionState !== 'Aprobado'" class="col-1">
-                    <p-button label="Enviar" [rounded]="true"
-                        (click)="addTask()"
-                        [disabled]="tasksForm.invalid" />
                 </div>
 
                 <div class=" col-12">
@@ -423,7 +401,7 @@
                               <textarea
                                   inputId="textarea"
                                   rows="3"
-                                  style="width: 100%;"
+                                  style="width: 100%; resize: none;"
                                   formControlName="comment"
                                   pInputTextarea 
                                   (keydown.enter)="addComment($event)"></textarea>
