--- a/src/app/demo/components/pages/hotbed-tracking/hotbed-tracking.component.html
+++ b/src/app/demo/components/pages/hotbed-tracking/hotbed-tracking.component.html
@@ -18,7 +18,7 @@
             <div class="card">
                 <p-table #dt [value]="registros" responsiveLayout="scroll"
                     [rows]="10"
-                    [globalFilterFields]="['thesis_project_title','nombre']"
+                    [globalFilterFields]="['title','nombre']"
                     [paginator]="true" [rowsPerPageOptions]="[10,20,30]"
                     [showCurrentPageReport]="true"
                     currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
@@ -39,12 +39,12 @@
                     </ng-template>
                     <ng-template pTemplate="header">
                         <tr> 
-                            <th pSortableColumn="thesis_project_title"
-                                style="width:60%">Título de
-                                tesis <p-sortIcon
+                            <th pSortableColumn="title"
+                                style="width:60%">Título der artículo
+                                 <p-sortIcon
                                     field="thesis_project_title"></p-sortIcon></th>
                             <th pSortableColumn="name"
-                                style="width:20%">Revisor
+                                style="width:20%">Estudiante(s)
                                 <p-sortIcon
                                     field="status"></p-sortIcon></th>
                             <th style="width:10%">Estado</th>
@@ -56,7 +56,7 @@
                             <td style="width:14%; min-width:10rem;"><span
                                     class="p-column-title">Título de
                                     tesis</span>
-                                {{data.thesis_project_title}}
+                                {{data.title}}
                             </td>
                             <td style="width:14%; min-width:8rem;">
                                 <span class="p-column-title">Revisor</span>
